[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/jogo1.gd" type="Script" id=1]
[ext_resource path="res://assets/jogo1/E1.png" type="Texture" id=2]
[ext_resource path="res://assets/jogo1/E2.png" type="Texture" id=3]
[ext_resource path="res://assets/jogo1/C.png" type="Texture" id=4]
[ext_resource path="res://assets/jogo1/E3.png" type="Texture" id=5]
[ext_resource path="res://assets/back_720p.png" type="Texture" id=6]

[node name="Jogo1 - RBrito" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="Button1" type="Button" parent="."]
margin_left = 70.0
margin_top = 100.0
margin_right = 582.0
margin_bottom = 606.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 4 )

[node name="Button2" type="Button" parent="."]
margin_left = 400.0
margin_top = 100.0
margin_right = 807.0
margin_bottom = 606.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 2 )

[node name="Button3" type="Button" parent="."]
margin_left = 700.0
margin_top = 100.0
margin_right = 1062.0
margin_bottom = 606.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 5 )

[node name="Button4" type="Button" parent="."]
margin_left = 950.0
margin_top = 131.0
margin_right = 1462.0
margin_bottom = 533.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 3 )

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
